assets/css/main.css
/* ... */
			#wrapper > .invert .gallery article .image {
				background-color: rgba(255, 255, 255, 0.125);
			}

			#wrapper > .invert .items.style1 > * {
				border-color: white;
			}

			#wrapper > .invert .items.style2 {
				border-color: white;
			}

				#wrapper > .invert .items.style2 > * {
					border-color: white;
				}

			#wrapper > .invert .index > * {
				border-top-color: white;
			}

		#wrapper > .color1 {
			background-color: #30363d;
		}

		#wrapper > .color2 {
			background-color: #db8992;
		}

		#wrapper > .color3 {
			background-color: #ab7aad;
		}

		#wrapper > .color4 {
			background-color: #897cad;
		}

		#wrapper > .color5 {
			background-color: #7794ce;
		}

		#wrapper > .color6 {
			background-color: #64abb4;
		}

		#wrapper > .color7 {
			background-color: #6ba78c;
		}

		#wrapper.divided > * {
			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.075);
		}

			#wrapper.divided > *:first-child {
				box-shadow: none !important;
			}

		#wrapper.divided > .invert {
			box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.125);
		}

			#wrapper.divided > .invert:first-child {
				box-shadow: none !important;
			}


/* NEW SECTIONS AND ELEMENTS */

header.header-wrapper {
	top: 0;
	width: 100%;
	position: fixed;
	z-index: 100;
	background-color: #ffffffb9;
}

div.header-inner-wrapper {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin: 1rem 7rem 1rem 7rem;
}

h1.site-title {
	font-weight: 900;
}

.button-nav {
	padding: 0 1rem;
}

a.button.big.wide.smooth-scroll-middle.navigation {
	box-shadow: none;
	min-width: 0;
	font-weight: 900;

}

div.image.header {
	width: 40rem;
}

.headshot-welcome-wrapper {
	display: flex;
	justify-content: center;
	/* border-radius: 100%; */
	/* height: 100%;
	width: 100%; */
	/* width: 3vw; */
	height: 20vh;
	justify-content: center;
  align-items: center;
}

.image.header {
}

img.headshot {
	clip-path: circle(200px at center);
	max-height: 100%;
	/* width: 100%; */
	/* height: 100vh; */
}

div.education-employment-container {
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	width: 100%;
}

div.education-employment.skills-container {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	flex-wrap: wrap;
	width: 100%;
	margin-top: 50px;
}

i.devicon {
	font-size: 2.3rem;
	margin: 9px;
}

img.figma, img.sketch {
	height: 2.3rem;
	margin: 3px
}

div.education-employment.img-container {
	display: flex;
	flex-direction: row;
}

img.education-employment.yale {
	width: 100px;
	margin-top: 10px;
	object-fit: scale-down;
}

img.education-employment.aa {
	width: 150px;
	margin-top: 10px;
	margin-left: 30px;
	object-fit: scale-down;
}

img.education-employment.meta {
	width: 150px;
	margin-top: 10px;
	margin-left: 30px;
	object-fit: scale-down;
}

img.education-employment.hubspot {
	width: 150px;
	margin-top: 10px;
	margin-left: 30px;
	object-fit: scale-down;
}

img.education-employment.getaway {
	width: 150px;
	margin-top: 10px;
	margin-left: 30px;
	object-fit: scale-down;
}

section.wrapper.projects {
	margin-top: 100px;
	box-shadow: 0;
}

.image.projects {
	border-right: 0.5px solid lightgray;
	border-left: 0.5px solid lightgray;
}

img.project-amateurhour {
	object-position: left !important;
}

img.project-javascriptspanish {
	object-position: 40% !important;
}

section.recommendations {
	background-color: rgb(250, 250, 250);
}

div.recommendation-container {
	display: flex;
	align-items: flex-start;
	margin-bottom: 50px;
}

h2.recommendations {
	margin-bottom: 2.5rem;
}

dt.rec-highlight {
	font-size: 1.2rem;
}

img.recommendation-photo {
	padding-right: 3rem;
	height: 7rem;
}

p.recommendation-body {
	margin: 25px;
}

p.recommendation-giver {
	padding: 0;
	margin: 0;
}

ul.actions.stacked.contact {
	justify-content: center;
}

ul.convo-topics {
	list-style: none;
	padding-bottom: .5rem;
}

p.ux-portfolio-password {
	font-style: italic;
	font-size: 0.8rem;
}

